tests/Record/expected
[<"Bob", 12, "blue"]

"Bob"
12
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:11--1:18
 1 |     value "grade" exampleRecord
               ^^^^^^^


"Bob"
12
Error: Can't find an implementation for HasIndex StudentSchema (There (There (There (There ?sa)))) 3.

(Interactive):1:11--1:12
 1 |     value 3 exampleRecord
               ^


[<"Bob", "blue"]
[<"Bob", 12]

[<"Bob", False, "blue"]

[<"Bob", 13, "blue"]

[<"Bob", 12, "blue"]

[<"Bob", "blue"]
[<"Bob", 12]
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:15--1:22
 1 |     dropField "grade" exampleRecord
                   ^^^^^^^


[<"Bob"]
[<"Bob"]

[<"Bob", 12, "blue", 8, 9]

True
False

LT
EQ
GT

GT
EQ
LT

